HTMLDialogElement#showModal() should ignore unfocusable elements with [autofocus]

"""
Let control be the first non-inert *focusable* area in subject's
control group whose DOM anchor has an autofocus attribute specified.
"""

https://html.spec.whatwg.org/multipage/forms.html#dialog-focusing-steps

R=falken@chromium.org
BUG=626041

Review-Url: https://codereview.chromium.org/2125893003
Cr-Commit-Position: refs/heads/master@{#404177}

Former-commit-id: 4e83c20aacf7d5b4deddf638da54239fe9a7bfdb